--- a/MvcAppSales/Views/_ViewImports.cshtml
+++ b/MvcAppSales/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using MvcAppSales
 @using MvcAppSales.Models
-@using MvcAppSales.Models.ViewModels;
+@using MvcAppSales.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
